--- a/app/src/main/res/layout/list_item_shopping_list.xml
+++ b/app/src/main/res/layout/list_item_shopping_list.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="@dimen/big_space"
         android:ellipsize="end"
         android:maxLines="1"
+        android:paddingHorizontal="@dimen/small_space"
         android:textSize="@dimen/text_size_title"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/subtitle"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="1"
+        android:paddingHorizontal="@dimen/small_space"
         android:textSize="@dimen/text_size_subtitle"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
