--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="text_size_title">16sp</dimen>
     <dimen name="text_size_subtitle">12sp</dimen>
+    <dimen name="tab_text_size">13sp</dimen>
 
     <dimen name="corner_rounding">10dp</dimen>
 
@@ -9,9 +10,11 @@
     <dimen name="medium_space">10dp</dimen>
     <dimen name="small_space">5dp</dimen>
     <dimen name="big_space">20dp</dimen>
+    <dimen name="mediumbig_space">15dp</dimen>
 
     <dimen name="fab_margin">32dp</dimen>
 
     <dimen name="list_item_icon_size">25dp</dimen>
     <dimen name="list_item_height">65dp</dimen>
+    <dimen name="toolbar_height">60dp</dimen>
 </resources>
