--- a/app/src/main/res/layout/dialog_submit_text.xml
+++ b/app/src/main/res/layout/dialog_submit_text.xml
@@ -9,8 +9,8 @@
         android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/small_space"
-        android:layout_marginTop="@dimen/medium_space"
+        android:layout_marginTop="@dimen/big_space"
+        android:layout_marginHorizontal="@dimen/medium_space"
         android:background="@color/light_grey"
         android:hint="@string/enter_text"
         android:imeOptions="actionDone"
@@ -25,7 +25,7 @@
         android:id="@+id/cancelButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_space"
+        android:layout_marginTop="@dimen/big_space"
         android:text="@string/cancel"
         android:textColor="@color/text_color"
         app:layout_constraintEnd_toStartOf="@id/submitButton"
@@ -37,13 +37,13 @@
         android:id="@+id/submitButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_space"
         android:backgroundTint="@color/app_green"
         android:text="@string/submit"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@id/cancelButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="6"
         app:layout_constraintStart_toEndOf="@id/cancelButton"
-        app:layout_constraintTop_toBottomOf="@id/editText" />
+        app:layout_constraintTop_toTopOf="@id/cancelButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
