Add list details funcionality with list item adding

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="text_size_toolbar">20sp</dimen>
     <dimen name="text_size_title">16sp</dimen>
     <dimen name="text_size_subtitle">12sp</dimen>
     <dimen name="tab_text_size">13sp</dimen>
@@ -14,7 +15,8 @@
 
     <dimen name="fab_margin">32dp</dimen>
 
-    <dimen name="list_item_icon_size">25dp</dimen>
+    <dimen name="medium_icon_size">25dp</dimen>
     <dimen name="list_item_height">65dp</dimen>
     <dimen name="toolbar_height">60dp</dimen>
+    <dimen name="big_icon_size">35dp</dimen>
 </resources>
