--- a/app/src/main/res/layout/fragment_shopping_lists.xml
+++ b/app/src/main/res/layout/fragment_shopping_lists.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/shoppingListsRecView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/light_grey">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/shoppingListsRecView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</FrameLayout>
+    android:layout_height="match_parent"
+    android:background="@color/light_grey" />
