--- a/app/src/main/res/layout/list_item_shopping_list_details.xml
+++ b/app/src/main/res/layout/list_item_shopping_list_details.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="@dimen/list_item_icon_size"
-        android:layout_height="@dimen/list_item_icon_size"
+        android:layout_width="@dimen/medium_icon_size"
+        android:layout_height="@dimen/medium_icon_size"
         android:layout_margin="@dimen/big_space"
         android:src="@drawable/ic_cart"
         app:layout_constraintBottom_toBottomOf="parent"
