--- a/app/src/main/res/layout/activity_list_details.xml
+++ b/app/src/main/res/layout/activity_list_details.xml
@@ -55,6 +55,7 @@
         android:layout_margin="@dimen/fab_margin"
         android:background="@null"
         android:src="@drawable/ic_add"
+        android:visibility="gone"
         app:fabSize="auto"
         app:tint="@color/white" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
