--- a/app/src/main/res/layout/dialog_submit_text.xml
+++ b/app/src/main/res/layout/dialog_submit_text.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="@dimen/big_space"
         android:layout_marginHorizontal="@dimen/medium_space"
         android:background="@color/light_grey"
-        android:hint="@string/enter_text"
+        android:hint="@string/enter_shopping_list_name"
         android:imeOptions="actionDone"
         android:inputType="text"
         android:maxLines="1"
