Some minor visual tweaks

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_height"
             android:background="@color/app_green"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:title="@string/shopping_lists_toolbar"
-            app:titleTextColor="@color/white">
+            android:orientation="horizontal"
+            app:layout_scrollFlags="scroll|enterAlways">
 
-        </androidx.appcompat.widget.Toolbar>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/medium_space"
+                android:gravity="center_vertical"
+                android:text="@string/list_details_toolbar"
+                android:textAlignment="gravity"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size_toolbar"
+                android:textStyle="bold" />
+
+        </LinearLayout>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
