--- a/app/src/main/res/layout/activity_list_details.xml
+++ b/app/src/main/res/layout/activity_list_details.xml
@@ -11,6 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_height"
+            android:background="@color/app_green"
             android:orientation="horizontal">
 
             <ImageView
